<resources>
    <string name="app_name">POPMessage</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password incorrect, between 8 and 16 characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="requested_not_found">You have write a great first message</string>
    <string name="messages_not_found">Not found messages</string>
    <string name="wrong_server_end">Something went wrong at server end</string>
    <string name="expired_session">Your session has expired. Please log in again</string>
    <string name="user_in_use">Email is in use for other user, change your email for other.</string>
    <string name="unexpected_error">Unexpected Error occurred! [Most common Error: Device might not be connected to Internet or remote server is not up and running]</string>
    <string name="error_field_required">This field is required</string>
    <string name="accept_terms">Please accept our Terms and Conditions.</string>
    <string name="invalid_params">Rectify any incorrect or add missing data.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sending_message">Sending message&#8230;</string>
    <string name="sending_vote">Voting&#8230;</string>
    <string name="delete_message">Delete message&#8230;</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="search_messages">Search messages by your location&#8230;</string>
    <string name="search_your_messages">Search your messages&#8230;</string>
    <string name="unexpected_short">Unexpected Error occurred! Requested resource not found. </string>
    <!-- String related to register -->
    <string name="create_account_for_new_users">Create account for new users</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="mounth">Month</string>
    <string name="day">Day</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="accept_privacy_policy">I accept the privacy policy</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="password">Password</string>
    <string name="register">Register form</string>
    <string name="create_new_account">create new account</string>
    <string name="messages">Messages</string>
    <!-- String to messages view -->
    <string name="public_messages">Public Messages</string>
    <string name="your_messages">Your Messages</string>
    <string name="map_messages">Map Messages</string>
    <string name="refresh_location">Refresh messages</string>
    <string name="refresh_you">Refresh your messages</string>
    <string name="log_out">Log Out</string>
    <string name="message">Your Message</string>
    <string name="of">&#160;/&#160;</string>
    <string name="character">Characters&#160;</string>
    <string name="publish">Publish</string>
    <string name="short_text">This text is too small [15 characters minimum].</string>
    <string name="big_text">This text is too big [160 characters maximum].</string>
    <string name="from">From:</string>
    <string name="you">Your message:</string>
    <string name="like">Like</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="disLike">DisLike</string>
    <string name="publish_success">Publish success:&#160;</string>
    <string name="create_message">Create message</string>
    <string name="ellipsis">&#8230;</string>
    <string name="vote">"Vote:&#160;"</string>
    <string name="vote_repeat">"One vote per message, thank you."</string>
    <string name="removed">"Removed:&#160;"</string>
    <!-- String to Errors -->
    <string name="not_permission">It is necessary to have permission to location service for use this application.</string>
    <string name="invalid_credential">INVALID CREDENTIALS OR LOGIN REQUIRES (FAILURE)</string>
</resources>
