<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/refresh_location" />

    <item
        android:id="@+id/map_messages"
        android:icon="@drawable/ic_map_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/map_messages" />

    <item
        android:id="@+id/my_messages"
        android:icon="@drawable/ic_create_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/your_messages" />

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:showAsAction="ifRoom"
        android:title="@string/log_out" />
</menu>